== 1.0.4 ==
* Update to PSR-0 : https://github.com/pda/pheanstalk/commit/412ab5b7469538ab613efd8fb91b4adc84bf599f
* Add warning about composer minimum-stability due to : https://github.com/armetiz/LeezyPheanstalkBundle/issues/8

== 1.0.3 ==
* Update code to pda/pheanstalk which is a PHP5.2 implementation.
* BC still ok.

== 1.0.2 ==
* Add Unit Test
* Throw exception when more than one connection have the default flag
* Switch dependency from 'mrpoundsign/pheanstalk-5.3' to 'pda/pheanstalk'
* Add TravisCI configuration

== 1.0.1 ==
* Fix dependency to pheanstalk-5.3. #4

== 1.0.0 ==
* Update README to be composer compliant.
* First stable tag version.